--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,6 +33,7 @@ body {
 	font-family: 'Gilroy';
 	font-size: 18px;
 	color: $mainColorText;
+	overflow-x: hidden;
 }
 // Обнуление, общие параметры ==========================================================================================
 
